# foundation-crack-classifier

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml
api/src/foundation_crack_api/: __init__.py  classifier_service.py  config.py  main.py  schemas.py
api/tests/: conftest.py  test_classifier_service.py  test_config.py  test_main.py
classifier/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
classifier/src/foundation_crack_classifier/: dataset.py  evaluate.py  infer.py  labels.py  model.py  schemas.py  thresholds.py  train.py
classifier/tests/: test_dataset.py  test_evaluate.py  test_infer.py  test_labels.py  test_model.py  test_schemas.py  test_smoke.py  test_thresholds.py  test_train.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.css  main.tsx  reset.css
web/src/composables/: useClassifier.ts
web/src/composables/__tests__/: useClassifier.spec.ts
web/src/lib/: classifier.ts  imageStore.ts  useClassifier.ts
web/src/lib/__tests__/: imageStore.test.ts  useClassifier.test.ts
web/src/pages/: ResultsPage.module.css  ResultsPage.tsx  UploadPage.module.css  UploadPage.tsx  index.vue  results.vue
web/src/pages/__tests__/: ResultsPage.test.tsx  results.spec.ts
web/src/routes/: index.tsx  results.tsx
web/src/state/: results.ts
web/src/test/: setup.ts
