[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation-crack-api"
version = "0.1.0"
description = "FastAPI wrapper for the local foundation crack classifier"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic>=2.7,<3.0",
  "pillow>=10.0,<12.0",
  "torch>=2.3,<3.0",
  "torchvision>=0.18,<1.0",
  "timm>=1.0,<2.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "/app/classifier_src"]
