[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation-crack-classifier"
version = "0.1.0"
description = "Local foundation crack severity classifier"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.3,<3.0",
  "torchvision>=0.18,<1.0",
  "timm>=1.0,<2.0",
  "pillow>=10.0,<12.0",
  "scikit-learn>=1.4,<2.0",
  "matplotlib>=3.8,<4.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
